[metadata]
name = langxa
version = attr: langxa.__version__
description = langXA: A dummy programming language written in Python.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xames3/langxa/
author = Akshay Mestry (XAMES3)
author_email = xa@mes3.in
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Utilities
keywords = langxa, python, programming-language
project_urls =
    Changelog = https://github.com/xames3/langxa
    Source = https://github.com/xames3/langxa
    Tracker = https://github.com/xames3/langxa/issues

[options]
packages = find:
include_package_data = true
python_requires = >= 3.6
zip_safe = no

[options.entry_points]
console_scripts =
    langxa = langxa.__main__:main
    xa = langxa.__main__:main

[mypy]
mypy_path = langxa
check_untyped_defs = True
disallow_any_generics = True
ignore_missing_imports = True
no_implicit_optional = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
warn_unused_configs = True
no_implicit_reexport = True
